// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chinese-japanese.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。
=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。

================================================================================
`;

exports[`chinese-japanese.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。
=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白
全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ
゛、ヲ゛）も行われたが、一般的にはならなかった。

================================================================================
`;

exports[`chinese-japanese.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。
=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白
全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ
゛、ヲ゛）も行われたが、一般的にはならなかった。

================================================================================
`;

exports[`chinese-japanese.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。
=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。

================================================================================
`;

exports[`japanese.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

=====================================output=====================================
私は JavaScript が好きです。

私は JavaScript が好きです。

作る means MAKE in English.

================================================================================
`;

exports[`japanese.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

=====================================output=====================================
私は JavaScript が好きです。

私は JavaScript が好きです。

作る means MAKE in English.

================================================================================
`;

exports[`japanese.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

=====================================output=====================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

================================================================================
`;

exports[`japanese.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

=====================================output=====================================
私はJavaScriptが好きです。

私は JavaScript が好きです。

作る means MAKE in English.

================================================================================
`;

exports[`korean.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

=====================================output=====================================
예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문

================================================================================
`;

exports[`korean.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

=====================================output=====================================
예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문 Latin 예문

================================================================================
`;

exports[`korean.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

=====================================output=====================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

================================================================================
`;

exports[`korean.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

=====================================output=====================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

================================================================================
`;

exports[`link.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`link.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`link.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`link.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`mixed.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`mixed.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`mixed.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

=====================================output=====================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段
Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的
一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中
文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合
著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English
混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個
English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是
一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！
這是一個English混合著中文的一段Paragraph！

================================================================================
`;

exports[`mixed.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

=====================================output=====================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

================================================================================
`;

exports[`space.md - {"cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`space.md - {"proseWrap":"always","cjkSpacing":"always"} format 1`] = `
====================================options=====================================
cjkSpacing: "always"
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`space.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`space.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

================================================================================
`;
